--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
     <head>
     	<meta charset="utf-8">
         <title>Cianobacterias</title>
-      <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="estilo.css">
     </head>
     <body>
+      <a class="block" href="comienzo.html">
         <div class="scroll-up" id="player">
-        <a href="comienzo.html"><button class="block"></button></a>
-      <p>Esto no es un simulacro, esto es un sistema de misión de emergencia avalado por el Ministerio de Salud Pública y la Dirección Nacional de Medio Ambiente anunciando el inicio de las cianobacterias.
-        <br>
-        Alertamos la máxima precaución ante este suceso al vacacionar en costas uruguayas.
-        <br>
-        Los guardavidas estarán distribuidos a lo largo del territorio nacional velando por el bienestar de todos los ciudadanos.
-        <br>
-        Benditas sean las piscinas que aún no han sido conquistadas por las cianobacterias.
-        <br>
-        Recuerden ponerse protector solar.
-        <br>
-        Se encuentra terminantemente prohibido acudir a las playas sin mate.
-        Que la suerte los acompañe.
-      </p>
-      <audio autoplay>
-        <source src="audio.ogg" type="audio/ogg">
-        <source src="audio.mp3" type="audio/mpeg">
-        </audio>
-    </div>
+          <p>Esto no es un simulacro, esto es un sistema de misión de emergencia avalado por el Ministerio de Salud Pública y la Dirección Nacional de Medio Ambiente anunciando el inicio de las cianobacterias.
+            <br>
+            Alertamos la máxima precaución ante este suceso al vacacionar en costas uruguayas.
+            <br>
+            Los guardavidas estarán distribuidos a lo largo del territorio nacional velando por el bienestar de todos los ciudadanos.
+            <br>
+            Benditas sean las piscinas que aún no han sido conquistadas por las cianobacterias.
+            <br>
+            Recuerden ponerse protector solar.
+            <br>
+            Se encuentra terminantemente prohibido acudir a las playas sin mate.
+            Que la suerte los acompañe.
+          </p>
+          <audio autoplay>
+            <source src="audio.ogg" type="audio/ogg">
+            <source src="audio.mp3" type="audio/mpeg">
+          </audio>
+        </div>
+      </a>
     </body>
 </html>
